--- a/layout-static.html
+++ b/layout-static.html
@@ -67,9 +67,6 @@
                     <a href="password.html" class="nav_link"><i class='bx bx-book nav_icon'></i>
                         <span class="nav_name">Forgot Password</span>
                     </a>
-                    <a href="401.html" class="nav_link"><i class='bx bx-folder nav_icon'></i>
-                        <span class="nav_name">401 Error</span>
-                    </a>
                     <a href="404.html" class="nav_link"><i class='bx bx-folder nav_icon'></i>
                         <span class="nav_name">404 Error</span>
                     </a>
@@ -84,9 +81,6 @@
                     </a>
                 </div>
             </div>
-            <a href="#" class="nav_link"><i class='bx bx-log-out nav_icon'></i>
-                <span class="nav_name">SignOut</span>
-            </a>
         </nav>
     </div>
     <!--Container Main start-->
@@ -94,8 +88,8 @@
         <h2>Static Navigation</h2>
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="index.html">Dashboard</a></li>
-                <li class="breadcrumb-item active" aria-current="page">/ Static Navigation</li>
+                <li class="breadcrumb-item"><a href="index.html">Usama</a></li>
+                <li class="breadcrumb-item active" aria-current="page">/ Dynamic Navigation</li>
             </ol>
         </nav>
 
@@ -110,12 +104,28 @@
                 <div>
                     <a href="#">Privacy Policy</a>
                     &middot;
-                    <a href="#">Terms &amp; Conditions</a>
+                    <a href="#">Terms &amp; My conditions</a>
                 </div>
             </div>
         </div>
     </footer>
 
+
+
+
+    <!--Container Main end-->
+    <footer class="py-4 bg-light mt-auto">
+        <div class="container-fluid px-4">
+            <div class="d-flex align-items-center justify-content-between small">
+                <div class="text-muted">Copyright &copy; Your Website 2022</div>
+                <div>
+                    <a href="#">Privacy Policy</a>
+                    &middot;
+                    <a href="#">Terms &amp; My conditions</a>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 
 
